k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lift-os
  labels:
    name: lift-os
    environment: production
